[gd_scene load_steps=15 format=3 uid="uid://c5e53p0d4ukws"]

[ext_resource type="Script" uid="uid://d3ft73jvs7l6x" path="res://scene/pause/pause_menu.gd" id="1_avy3h"]
[ext_resource type="Shader" uid="uid://cr6s0pm5ln5a" path="res://scene/pause/gdshader.gdshader" id="1_fo2g5"]
[ext_resource type="Texture2D" uid="uid://d3upi3vry6qcq" path="res://Assets/Background ui/menu.png" id="3_is3o6"]
[ext_resource type="StyleBox" uid="uid://qvkgi50qb4c2" path="res://Assets/font/hove.tres" id="4_45db5"]
[ext_resource type="StyleBox" uid="uid://rwp6i0hdqlu5" path="res://Assets/font/main_menu.tres" id="4_qok3e"]
[ext_resource type="Texture2D" uid="uid://c2fqb0uffgwrd" path="res://Assets/collectable/items.png" id="6_sribt"]
[ext_resource type="Script" uid="uid://cl4xja4h7yllc" path="res://scene/pause/inventory/inventory_ui.gd" id="7_4pfdo"]
[ext_resource type="PackedScene" uid="uid://cc8pqkx3avp3f" path="res://scene/pause/inventory/inventory_slot.tscn" id="7_2850f"]
[ext_resource type="Resource" uid="uid://dnu5fbj15mgo7" path="res://scene/pause/inventory/player_inevtory.tres" id="8_5k552"]
[ext_resource type="SystemFont" uid="uid://bxu5bd0q3i46i" path="res://Assets/font/nom2.tres" id="10_3q6r8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_avy3h"]
shader = ExtResource("1_fo2g5")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qok3e"]
texture = ExtResource("3_is3o6")
region_rect = Rect2(274, 111, 476, 799)

[sub_resource type="AtlasTexture" id="AtlasTexture_2850f"]
atlas = ExtResource("6_sribt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4pfdo"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_2850f")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_avy3h")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_avy3h")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -117.0
offset_right = 107.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qok3e")

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 24

[node name="btnResum" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("4_45db5")
theme_override_styles/pressed = ExtResource("4_45db5")
theme_override_styles/normal = ExtResource("4_45db5")
text = "Resume
"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("4_45db5")
theme_override_styles/pressed = ExtResource("4_qok3e")
theme_override_styles/normal = ExtResource("4_qok3e")
text = "Restart"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/hover = ExtResource("4_45db5")
theme_override_styles/pressed = ExtResource("4_qok3e")
theme_override_styles/normal = ExtResource("4_qok3e")
text = "Exit
"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_4pfdo")

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer2/PanelContainer2"]
layout_mode = 2
columns = 4
script = ExtResource("7_4pfdo")
data = ExtResource("8_5k552")

[node name="InventorySlot" parent="PanelContainer/VBoxContainer2/PanelContainer2/GridContainer" instance=ExtResource("7_2850f")]
layout_mode = 2

[node name="InventorySlot5" parent="PanelContainer/VBoxContainer2/PanelContainer2/GridContainer" instance=ExtResource("7_2850f")]
layout_mode = 2

[node name="InventorySlot6" parent="PanelContainer/VBoxContainer2/PanelContainer2/GridContainer" instance=ExtResource("7_2850f")]
layout_mode = 2

[node name="InventorySlot7" parent="PanelContainer/VBoxContainer2/PanelContainer2/GridContainer" instance=ExtResource("7_2850f")]
layout_mode = 2

[node name="itemDesc" type="Label" parent="."]
layout_mode = 0
offset_left = -89.0
offset_top = -93.0
offset_right = 106.0
offset_bottom = -45.0
theme_override_fonts/font = ExtResource("10_3q6r8")
theme_override_font_sizes/font_size = 12
text = "
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 5

[connection signal="pressed" from="PanelContainer/VBoxContainer/btnResum" to="." method="_on_btn_resum_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
